infinispan-app.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    labels:
      template: infinispan-ephemeral
    name: infinispan-app
- apiVersion: v1
  groupNames: null
  kind: RoleBinding
  metadata:
    labels:
      template: infinispan-ephemeral
    name: infinispan-app-view
  roleRef:
    name: view
  subjects:
  - kind: ServiceAccount
    name: infinispan-app
  userNames:
  - system:serviceaccount:myproject:infinispan-app
- apiVersion: v1
  kind: Secret
  metadata:
    annotations:
      template.openshift.io/expose-infinispan.client.hotrod.auth_password: '{.data[''application-password'']}'
      template.openshift.io/expose-infinispan.client.hotrod.auth_username: '{.data[''application-user'']}'
    labels:
      template: infinispan-ephemeral
    name: infinispan-app
  stringData:
    application-password: v7FQnJ8y
    application-user: OqIe3cpb
    management-password: wI6QtNOt
    management-user: PrMhfbvx
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's HTTP port.
    labels:
      application: infinispan-app
      template: infinispan-ephemeral
    name: infinispan-app-http
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentConfig: infinispan-app
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Hot Rod's port.
      template.openshift.io/expose-infinispan.client.hotrod.server_list: '{.spec.clusterIP}:{.spec.ports[0].port}'
    labels:
      application: infinispan-app
      template: infinispan-ephemeral
    name: infinispan-app-hotrod
  spec:
    ports:
    - port: 11222
      targetPort: 11222
    selector:
      deploymentConfig: infinispan-app
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The management console.
    labels:
      application: infinispan-app
      template: infinispan-ephemeral
    name: infinispan-app-management
  spec:
    ports:
    - port: 9990
      targetPort: 9990
    selector:
      deploymentConfig: infinispan-app
- apiVersion: v1
  data:
    cloud-ephemeral.xml: |
      [...]
  kind: ConfigMap
  metadata:
    labels:
      application: infinispan-app
      template: infinispan-ephemeral
    name: infinispan-app-configuration
- apiVersion: v1
  id: infinispan-app-management
  kind: Route
  metadata:
    annotations:
      description: Route for the management console.
    labels:
      application: infinispan-app
      template: infinispan-ephemeral
    name: infinispan-app-management
  spec:
    to:
      kind: Service
      name: infinispan-app-management
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: infinispan-app
      template: infinispan-ephemeral
    name: infinispan-app
  spec:
    replicas: 1
    selector:
      deploymentConfig: infinispan-app
    strategy:
      rollingParams:
        intervalSeconds: 20
        maxSurge: 1
        maxUnavailable: 1
        timeoutSeconds: 1200
        updatePeriodSeconds: 20
      type: Rolling
    template:
      metadata:
        labels:
          application: infinispan-app
          deploymentConfig: infinispan-app
        name: infinispan-app
      spec:
        containers:
        - args:
          - custom/cloud-ephemeral.xml
          - -Djboss.default.jgroups.stack=kubernetes
          image: jboss/infinispan-server:9.1.0.Final-2
          livenessProbe:
            exec:
              command:
              - /usr/local/bin/is_running.sh
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 80
          name: infinispan-app
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9990
            name: management
            protocol: TCP
          - containerPort: 8888
            name: ping
            protocol: TCP
          - containerPort: 11222
            name: hotrod
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /usr/local/bin/is_healthy.sh
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 2
            timeoutSeconds: 80
          resources:
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
          - mountPath: /opt/jboss/infinispan-server/standalone/configuration/custom
            name: infinispan-app-configuration
        serviceAccountName: infinispan-app
        terminationGracePeriodSeconds: 120
        volumes:
        - configMap:
            name: infinispan-app-configuration
          name: infinispan-app-configuration
    triggers:
    - type: ConfigChange
kind: List
metadata: {}
